methods to grab field metadata
