# services/datasetdetails.js
@@ -1,69 +1,70 @@
-'use strict';
-
-let readYaml = require('read-yaml');
-let UtilsService =  require('../services/utils.js');
-let request = require('request-promise');
+'use strict'
+let UtilsService = require('../services/utils.js')
+let request = require('request-promise')
 var _ = require('underscore')
 
 class DatasetDetailsService {
 
-    getDatasetDetails(fbf) {
-      let datasets = ['datasetProfiles', 'assetInventory', 'master_dd']
-
-      let data = {
-        fbf: null,
-        getCombined: function(allData) {
-          if(!allData){
-            return [{'error': 'ERROR! No Data Found!'}]
+  getDatasetDetails (fbf) {
+    let datasets = ['datasetProfiles', 'assetInventory', 'masterDDDataset', 'datasetProfilesIsGeo']
+    let data = {
+      fbf: null,
+      getHasGeo: function (allData) {
+        if (allData.length >= 4) {
+          if (allData[3].length < 1) {
+            allData[3] = [{'datasetid': fbf, 'hasGeo': false}]
           }
-           if(allData[1].length < 1){
-            return [{'error': 'ERROR! No Data Found!'}]
-          }
-          console.log(allData)
-          let combinedObj = {}
-          let results = {}
+        }
+        return allData
+      },
+      getCombined: function (allData) {
+        if (!allData) {
+          return [{'error': 'ERROR! No Data Found!'}]
+        } else {
           let fieldList = []
-          for(let i = 0; i < datasets.length; i++){
-            let dataset = datasets[i]
-            fieldList = fieldList.concat(UtilsService.getFieldList(dataset))
+          for (let i = 0; i < datasets.length; i++) {
+            fieldList = fieldList.concat(UtilsService.getFieldList(datasets[i]))
           }
-          for(let i = 0; i < allData.length; i++){
-            combinedObj = _.extend(combinedObj, allData[i][0])
+          let results = allData[0]
+          for (let i = 1; i < allData.length; i++) {
+            results = _.map(results, function (item) {
+              let obj = _.extend(item, _.findWhere(allData[i], { datasetid: item.datasetid }))
+              let objKeys = Object.keys(obj)
+              let nullKeys = fieldList.filter(x => objKeys.indexOf(x) < 0)
+              if (nullKeys.length > 0) {
+                nullKeys.forEach(function (key) {
+                  obj[key] = null
+                })
+              }
+              return obj
+            })
           }
-          for(let i = 0; i < fieldList.length; i++){
-            results[fieldList[i]] = combinedObj[fieldList[i]] || null
-          }
-          //for(let i = 0; i < fieldList.length; i++){
-          //  console.log( '"' + fieldList[i] + '": {"type":' +'"string"' +"},")
-          //}
-          return [results]
+          return results
         }
       }
-      for(let i = 0; i < datasets.length; i++){
-        let dataset = datasets[i]
-        data[dataset] =  function () {
-          return request({
-            "method":"GET",
-            'auth': {
-                      'username': UtilsService.socrataConfigs.username,
-                      'password': UtilsService.socrataConfigs.password_ascii
-            },
-            "uri": UtilsService.makeQry(fbf, dataset),
-            "json": true
-          });
-        }
+    }
+    for (let i = 0; i < datasets.length; i++) {
+      let dataset = datasets[i]
+      data[dataset] = function () {
+        return request({
+          'method': 'GET',
+          'auth': {
+            'username': UtilsService.socrataConfigs.username,
+            'password': UtilsService.socrataConfigs.password_ascii
+          },
+          'uri': UtilsService.makeQry(fbf, dataset),
+          'json': true
+        })
       }
-
-      function main(fbf) {
-        data.fbf = fbf;
-        // call all functions asyncronously, and wait for all API calls to complete; then suppy data to combine and reduce functions
-        return Promise.all([ data.datasetProfiles(), data.assetInventory(), data.master_dd()])
-          .then(data.getCombined);
-      }
-     return main
-
-   }
-
+    }
+    function main (fbf) {
+      data.fbf = fbf
+      // call all functions asyncronously, and wait for all API calls to complete; then suppy data to combine and reduce functions
+      return Promise.all([data.datasetProfiles(), data.assetInventory(), data.masterDDDataset(), data.datasetProfilesIsGeo()])
+        .then(data.getHasGeo)
+        .then(data.getCombined)
+    }
+    return main
+  }
  }
-
-module.exports = new DatasetDetailsService();
+module.exports = new DatasetDetailsService()
